分支提交,压缩版代码

--- a/css/cart.css
+++ b/css/cart.css
@@ -1,127 +1,1 @@
-*{
-	margin:0;
-	padding: 0;
-}
-.title{
-	background-color: #50cbee;
-	color:#fff;
-	padding:0 10px;
-}
-.title-button{
-	display: flex;
-	justify-content: space-around;
-	padding:2px 5px;
-	line-height: 20px;
-	font-size:16px;
-	align-items: center;
-}
-.title-button span img{
-	width:16px;
-	height:16px;
-}
-.cart-list{
-	padding:10px;
-}
-.cart-item{
-	background-color: #f2f2f2;
-	height:100px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-.cart-select{
-	width:30px;
-	height:30px;
-}
-.cart-select img{
-	width:100%;
-	height:100%;
-}
-.cart-food-img{
-	width:90px;
-	height:90px;
-}
-.cart-food-img img{
-	width: 100%;
-	height: 100%;
-}
-.cart-food-msg{
-	width:40%;
-	text-align: center;
-}
-.cart-food-name{
-	padding:5px 0;
-	font-size:16px;
-}
-.cart-food-price{
-	padding-bottom:5px;
-	color:#c60023;
-}
-.cart-food-btn span{
-	margin:0 5px;
-	font-size:15px;
-	padding:4px;
-	border:1px solid #666;
-}
-.cart-food-btn text{
-	font-size: 17px;
-}
-.cart-remove{
-	width:30px;
-	height:30px;
-}
-.cart-remove img{
-	width:100%;
-	height:100%;
-}
-.cart-buy-frame{
-	width:100%;
-	position: fixed;
-	margin-top: 80px;
-	bottom:0px;
-	height:60px;
-	background-color: #f2f2f2;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-.cart-buy-left{
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	width:110px;
-	height:60px;
-}
-.cart-buy-modify{
-	flex:1;
-}
-.cart-buy-right{
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	width:210px;
-	height:60px;
-}
-.cart-buy-img{
-	width:30px;
-	height: 30px;
-	margin-left:10px;
-}
-.cart-buy-img img{
-	width:100%;
-	height:100%;
-}
-.cart-buy-img-title{
-	margin-right:30px;
-}
-.cart-buy-money{
-	padding-left: 10px;
-}
-.money-style{
-	color:#c60023;
-}
-.cart-buy-btn{
-	padding:20px 15px;
-	background-color: #006dc6;
-	color:#fff;
-}
+*{margin:0;padding:0}.title{background-color:#50cbee;color:#fff;padding:0 10px}.title-button{display:flex;justify-content:space-around;padding:2px 5px;line-height:20px;font-size:16px;align-items:center}.title-button span img{width:16px;height:16px}.cart-list{padding:10px}.cart-item{background-color:#f2f2f2;height:100px;display:flex;justify-content:space-between;align-items:center}.cart-select{width:30px;height:30px}.cart-select img{width:100%;height:100%}.cart-food-img{width:90px;height:90px}.cart-food-img img{width:100%;height:100%}.cart-food-msg{width:40%;text-align:center}.cart-food-name{padding:5px 0;font-size:16px}.cart-food-price{padding-bottom:5px;color:#c60023}.cart-food-btn span{margin:0 5px;font-size:15px;padding:4px;border:1px solid #666}.cart-food-btn text{font-size:17px}.cart-remove{width:30px;height:30px}.cart-remove img{width:100%;height:100%}.cart-buy-frame{width:100%;position:fixed;margin-top:80px;bottom:0;height:60px;background-color:#f2f2f2;display:flex;justify-content:space-between;align-items:center}.cart-buy-left{display:flex;justify-content:space-around;align-items:center;width:110px;height:60px}.cart-buy-modify{flex:1}.cart-buy-right{display:flex;justify-content:space-between;align-items:center;width:210px;height:60px}.cart-buy-img{width:30px;height:30px;margin-left:10px}.cart-buy-img img{width:100%;height:100%}.cart-buy-img-title{margin-right:30px}.cart-buy-money{padding-left:10px}.money-style{color:#c60023}.cart-buy-btn{padding:20px 15px;background-color:#006dc6;color:#fff}
