--- a/css/detail.css
+++ b/css/detail.css
@@ -1,113 +1,1 @@
-*{
-	margin:0;
-	padding: 0;
-}
-.title{
-	background-color: #50cbee;
-	color:#fff;
-	padding:0 10px;
-}
-.title-button{
-	display: flex;
-	justify-content: space-around;
-	padding:2px 5px;
-	line-height: 20px;
-	font-size:16px;
-	align-items: center;
-}
-.title-button span img{
-	width:16px;
-	height:16px;
-}
-
-.food-item{
-	/*height:470px;*/
-	margin-top:10px;
-	background-color: #f3f3f3;
-}
-.food-item-img{
-	padding-top:10px;
-	height:240px;
-}
-.food-item-img img{
-	width:100%;
-	height:100%;
-}
-.food-item-basic{
-	text-align: center;
-	margin:10px auto;
-	width:80%;
-}
-.food-item-name{
-	font-size: 20px;
-}
-.food-item-desc{
-	font-size:15px;
-	color:#50cbee;
-}
-.food-item-price{
-	font-size: 18px;
-	color:#c60023;
-}
-.food-buy-btn{
-    padding: 0 20px;
-    height: 40px;
-    line-height: 40px;
-    vertical-align: middle;
-    background-color: #50cbee;
-    font-size: 17px;
-    font-weight: 700;
-    color: #fff;
-    cursor: pointer;
-}
-
-.food-comment-title{
-	font-size:18px;
-	padding-left:5px;
-	padding-top:10px;
-	padding-bottom: 5px;
-	border-bottom: 1px solid #ccc;
-	color:#666;
-}
-.food-comment{
-	width:100%;	
-	padding:10px 0;
-}
-.food-comment-header{
-	width:100%;
-	height:60px;
-}
-.food-comment-user{
-	display: inline-block;
-	width:60px;
-	height:60px;
-}
-.food-comment-user img{
-	width:100%;
-	height:100%;
-}
-.food-comment-name{
-	display: inline-block;
-	margin-left:10px;
-	font-size:18px;
-	color:#666;
-}
-.food-comment-date{
-	margin-left:10px;
-	font-size:12px;
-	color:#bbb;
-}
-.food-comment-desc{
-	width:100%;
-	font-size:16px;
-	padding-top:30px;
-}
-.tx_window{
-	width:150px;
-	height:150px;
-	margin:100px auto;
-}
-.tx_window img{
-	width:100%;
-	height:100%;
-}
+*{margin:0;padding:0}.title{background-color:#50cbee;color:#fff;padding:0 10px}.title-button{display:flex;justify-content:space-around;padding:2px 5px;line-height:20px;font-size:16px;align-items:center}.title-button span img{width:16px;height:16px}.food-item{margin-top:10px;background-color:#f3f3f3}.food-item-img{padding-top:10px;height:240px}.food-item-img img{width:100%;height:100%}.food-item-basic{text-align:center;margin:10px auto;width:80%}.food-item-name{font-size:20px}.food-item-desc{font-size:15px;color:#50cbee}.food-item-price{font-size:18px;color:#c60023}.food-buy-btn{padding:0 20px;height:40px;line-height:40px;vertical-align:middle;background-color:#50cbee;font-size:17px;font-weight:700;color:#fff;cursor:pointer}.food-comment-title{font-size:18px;padding-left:5px;padding-top:10px;padding-bottom:5px;border-bottom:1px solid #ccc;color:#666}.food-comment{width:100%;padding:10px 0}.food-comment-header{width:100%;height:60px}.food-comment-user{display:inline-block;width:60px;height:60px}.food-comment-user img{width:100%;height:100%}.food-comment-name{display:inline-block;margin-left:10px;font-size:18px;color:#666}.food-comment-date{margin-left:10px;font-size:12px;color:#bbb}.food-comment-desc{width:100%;font-size:16px;padding-top:30px}.tx_window{width:150px;height:150px;margin:100px auto}.tx_window img{width:100%;height:100%}
