--- a/css/order-detail.css
+++ b/css/order-detail.css
@@ -1,115 +1,1 @@
-*{
-	margin:0;
-	padding: 0;
-}
-.title{
-	background-color: #50cbee;
-	color:#fff;
-	padding:0 10px;
-}
-.title-button{
-	display: flex;
-	justify-content: space-around;
-	padding:2px 5px;
-	line-height: 20px;
-	font-size:16px;
-	align-items: center;
-}
-.title-button span img{
-	width:16px;
-	height:16px;
-}
-.order-detail{
-	margin:10px auto;
-	height:auto;
-}
-.order_detail_msg{
-	padding:0px 5px;
-	height:220px;
-}
-.order_detail_title{
-	font-size:18px;
-	padding-bottom: 10px;
-	color:#666;
-	font-weight: 700;
-}
-.ordr_detail_msg_item{
-	border:1px solid #666;
-	box-sizing: border-box;
-}
-.order_detail{
-	padding:5px 5px;
-	font-size:12px;
-	color:#666;
-}
-.order_detail span{
-	padding-left:10px;
-	color:#666;
-	font-size:12px;
-	font-weight: 700;
-	overflow: hidden;
-	text-overflow:ellipsis;
-}
-.order_detail_list{
-	margin-top:10px;
-	padding:0 5px;
-	padding-top:5px;
-}
-
-.order_food_item{
-	margin-top: 5px;
-	padding:0px 10px;
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	border:3px solid #fff;
-	box-sizing: border-box;
-}
-.order_food_img{
-	width:100px;
-	height:100px;
-}
-.order_food_img img{
-	width:100%;
-	height: 100%;
-}
-.order_food_msg{
-	padding:10px;
-	text-align: center;
-	flex:1;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
-}
-.order_food_shuxing{
-	padding:5px 0;
-}
-.order_food_price{
-	font-size:14px;
-	font-weight: 700;
-	color:#c60023;
-}
-.order_food_name{
-	font-size:16px;
-	font-weight: 700;
-	color:#666;
-}
-.order_food_num{
-	font-size:14px;
-	font-weight: 700;
-	color:#666;
-}
-.order_count_title{
-	font-size:18px;
-	padding:10px 5px;
-	color:#666;
-	font-weight: 700;
-}
-.order_count_price{
-	text-align: right;
-	padding-bottom:10px;
-	padding-right:10px;
-	font-size:18px;
-	font-weight: 700;
-	color:#c60023;
-}
+*{margin:0;padding:0}.title{background-color:#50cbee;color:#fff;padding:0 10px}.title-button{display:flex;justify-content:space-around;padding:2px 5px;line-height:20px;font-size:16px;align-items:center}.title-button span img{width:16px;height:16px}.order-detail{margin:10px auto;height:auto}.order_detail_msg{padding:0 5px;height:220px}.order_detail_title{font-size:18px;padding-bottom:10px;color:#666;font-weight:700}.ordr_detail_msg_item{border:1px solid #666;box-sizing:border-box}.order_detail{padding:5px 5px;font-size:12px;color:#666}.order_detail span{padding-left:10px;color:#666;font-size:12px;font-weight:700;overflow:hidden;text-overflow:ellipsis}.order_detail_list{margin-top:10px;padding:0 5px;padding-top:5px}.order_food_item{margin-top:5px;padding:0 10px;display:flex;justify-content:space-around;align-items:center;border:3px solid #fff;box-sizing:border-box}.order_food_img{width:100px;height:100px}.order_food_img img{width:100%;height:100%}.order_food_msg{padding:10px;text-align:center;flex:1;display:flex;flex-direction:column;justify-content:space-around}.order_food_shuxing{padding:5px 0}.order_food_price{font-size:14px;font-weight:700;color:#c60023}.order_food_name{font-size:16px;font-weight:700;color:#666}.order_food_num{font-size:14px;font-weight:700;color:#666}.order_count_title{font-size:18px;padding:10px 5px;color:#666;font-weight:700}.order_count_price{text-align:right;padding-bottom:10px;padding-right:10px;font-size:18px;font-weight:700;color:#c60023}
