--- a/css/order.css
+++ b/css/order.css
@@ -1,134 +1,1 @@
-*{
-	margin:0;
-	padding: 0;
-}
-.title{
-	background-color: #50cbee;
-	color:#fff;
-	padding:0 10px;
-}
-.title-button{
-	display: flex;
-	justify-content: space-around;
-	padding:2px 5px;
-	line-height: 20px;
-	font-size:16px;
-	align-items: center;
-}
-.title-button span img{
-	width:16px;
-	height:16px;
-}
-.order-list{
-	padding:10px;
-}
-.order-item{
-	border:2px solid #fff;
-	box-sizing: border-box;
-	padding:5px;
-	background-color: #fff;
-	height:200px;
-}
-.order-item-header{
-	padding:5px 0;
-	width:100%;
-	display: flex;
-	justify-content: space-between;
-}
-.order-item-no{
-	font-size:14px;
-	font-weight: 700;
-}
-.order-item-status{
-	font-size:14px;
-	font-weight: 700;
-	color:#c60023;
-}
-.order-item-body{
-	border:1px solid #666;
-	padding:5px;
-	width:100%;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-.order-item-img{
-	width:80px;
-	height:80px;
-}
-.order-item-img img{
-	width:100%;
-	height:100%;
-}
-.order-item-name{
-	padding-left:5px;
-	flex:1;
-}
-.order-item-name{
-	font-size:11px;
-}
-.order-item-name span{
-	color:#666;
-	font-size:14px;
-	font-weight: 700;
-	width:100px;
-	overflow: hidden;
-	text-overflow:ellipsis;
-}
-.order-item-del{
-	width:30px;
-	height:30px;
-}
-.order-item-del img{
-	width:100%;
-	height: 100%;
-}
-.order-item-last{
-	padding-top:5px;
-	padding-right:5px;
-	font-size:14px;
-	text-align: right;
-}
-.order-item-last span{
-	font-size:14px;
-	font-weight: 700;
-	color:#c60023;
-}
-.order-item-play{
-	padding:0 5px;
-	padding-top:10px;
-	width:100%;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-.order-item-space{
-	flex:1;
-}
-.order-item-btn{
-	padding:5px 10px;
-	font-size:14px;
-	border:1px solid #666;
-	margin:0 5px;
-}
-.order-item-play .order-item-btn:last-child{
-	margin-right:0;
-}
-.select-num{
-	width:200px;
-	margin:10px auto;
-	bottom:5px;
-	text-align: center;
-}
-.select-num span{
-	padding:3px 5px;
-	border:1px solid #666;
-	box-sizing: border-box;
-}
-.select-num .pageStart{
-	padding:3px 5px;
-	border:1px solid #ccc;
-	background-color:#50cbee;
-	color:#fff;
-	box-sizing: border-box;
-}
+*{margin:0;padding:0}.title{background-color:#50cbee;color:#fff;padding:0 10px}.title-button{display:flex;justify-content:space-around;padding:2px 5px;line-height:20px;font-size:16px;align-items:center}.title-button span img{width:16px;height:16px}.order-list{padding:10px}.order-item{border:2px solid #fff;box-sizing:border-box;padding:5px;background-color:#fff;height:200px}.order-item-header{padding:5px 0;width:100%;display:flex;justify-content:space-between}.order-item-no{font-size:14px;font-weight:700}.order-item-status{font-size:14px;font-weight:700;color:#c60023}.order-item-body{border:1px solid #666;padding:5px;width:100%;display:flex;justify-content:space-between;align-items:center}.order-item-img{width:80px;height:80px}.order-item-img img{width:100%;height:100%}.order-item-name{padding-left:5px;flex:1}.order-item-name{font-size:11px}.order-item-name span{color:#666;font-size:14px;font-weight:700;width:100px;overflow:hidden;text-overflow:ellipsis}.order-item-del{width:30px;height:30px}.order-item-del img{width:100%;height:100%}.order-item-last{padding-top:5px;padding-right:5px;font-size:14px;text-align:right}.order-item-last span{font-size:14px;font-weight:700;color:#c60023}.order-item-play{padding:0 5px;padding-top:10px;width:100%;display:flex;justify-content:space-between;align-items:center}.order-item-space{flex:1}.order-item-btn{padding:5px 10px;font-size:14px;border:1px solid #666;margin:0 5px}.order-item-play .order-item-btn:last-child{margin-right:0}.select-num{width:200px;margin:10px auto;bottom:5px;text-align:center}.select-num span{padding:3px 5px;border:1px solid #666;box-sizing:border-box}.select-num .pageStart{padding:3px 5px;border:1px solid #ccc;background-color:#50cbee;color:#fff;box-sizing:border-box}
