--- a/css/login.css
+++ b/css/login.css
@@ -1,101 +1,1 @@
-*{
-	margin:0;
-	padding: 0;
-}
-.title{
-	background-color: #50cbee;
-	color:#fff;
-	padding:0 10px;
-}
-.title-button{
-	display: flex;
-	justify-content: space-around;
-	padding:2px 5px;
-	line-height: 20px;
-	font-size:16px;
-	align-items: center;
-}
-.title-button span img{
-	width:16px;
-	height:16px;
-}
-.isSelect{
-	color:#dedede;
-}
-.user-login{
-	padding: 30px 0;
-}
-.user-login-title{
-	font-size:18px;
-	color:#666;
-	font-weight: 700;
-	text-align: center;
-	padding:10px;
-	border-bottom: 1px solid #ccc;
-}
-.user-login-item{
-	background-color: #fff;
-	margin-top:20px;
-	height:40px;
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-}
-.user-login-item-img{
-	width:30px;
-	height:30px;
-	flex:none;
-}
-.user-login-item-img img{
-	width:100%;
-	height:100%;
-}
-.user-login-item-input{
-	padding-left:10px;
-	flex:1;
-}
-.code-input{
-	width:20%;
-}
-.user-login-item-input input{
-	height:100%;
-	font-size:15px;
-	padding:10px 10px;
-	border:1px solid #fff;
-}
-.user-login-item-input input:focus{
-	outline: none;
-}
-.code-input input{
-	width:100%;	
-}
-.get-code{
-	background-color: #50cbee;
-	color:#fff;
-	flex:none;
-	text-align: center;
-	font-size: 12px;
-	width:90px;
-	padding:5px 0px;
-}
-.user-login-btn{
-	height:40px;
-	font-size:24px;
-	color:#fff;
-	font-weight: 700;
-	background-color: #50cbee;
-}
-.goto{
-	margin:20px auto;
-	text-align: center;
-	width:100px;
-	font-size:14px;
-	padding: 5px 10px;
-	border:1px solid #50cbee;
-	color:#50cbee;
-}
-.error-msg{
-	font-size:14px;
-	color:#c00202;
-	text-align: center;
-}
+*{margin:0;padding:0}.title{background-color:#50cbee;color:#fff;padding:0 10px}.title-button{display:flex;justify-content:space-around;padding:2px 5px;line-height:20px;font-size:16px;align-items:center}.title-button span img{width:16px;height:16px}.isSelect{color:#dedede}.user-login{padding:30px 0}.user-login-title{font-size:18px;color:#666;font-weight:700;text-align:center;padding:10px;border-bottom:1px solid #ccc}.user-login-item{background-color:#fff;margin-top:20px;height:40px;display:flex;justify-content:space-around;align-items:center}.user-login-item-img{width:30px;height:30px;flex:none}.user-login-item-img img{width:100%;height:100%}.user-login-item-input{padding-left:10px;flex:1}.code-input{width:20%}.user-login-item-input input{height:100%;font-size:15px;padding:10px 10px;border:1px solid #fff}.user-login-item-input input:focus{outline:0}.code-input input{width:100%}.get-code{background-color:#50cbee;color:#fff;flex:none;text-align:center;font-size:12px;width:90px;padding:5px 0}.user-login-btn{height:40px;font-size:24px;color:#fff;font-weight:700;background-color:#50cbee}.goto{margin:20px auto;text-align:center;width:100px;font-size:14px;padding:5px 10px;border:1px solid #50cbee;color:#50cbee}.error-msg{font-size:14px;color:#c00202;text-align:center}
