--- a/css/pay.css
+++ b/css/pay.css
@@ -1,53 +1,1 @@
-*{
-	margin:0;
-	padding: 0;
-}
-.title{
-	background-color: #50cbee;
-	color:#fff;
-	padding:0 10px;
-}
-.title-button{
-	display: flex;
-	justify-content: space-around;
-	padding:2px 5px;
-	line-height: 20px;
-	font-size:16px;
-	align-items: center;
-}
-.title-button span img{
-	width:16px;
-	height:16px;
-}
-.order-item-success{
-	padding:20px;
-}
-.order-pay-success{
-	font-size:18px;
-	font-weight: 700;
-	color:#666;
-	text-align: center;
-}
-.order-pay-png{
-	margin:20px auto;
-	width:150px;
-	height:150px;
-}
-.order-pay-png img{
-	width: 100%;
-	height: 100%;
-}
-.order-pay-btn{
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	padding-top: 20px;
-	text-align: center;
-}
-.pay-btn{
-	font-size:14px;
-	margin:0 10px;
-	padding:5px 10px;
-	border:1px solid #666;
-	box-sizing: border-box;
-}
+*{margin:0;padding:0}.title{background-color:#50cbee;color:#fff;padding:0 10px}.title-button{display:flex;justify-content:space-around;padding:2px 5px;line-height:20px;font-size:16px;align-items:center}.title-button span img{width:16px;height:16px}.order-item-success{padding:20px}.order-pay-success{font-size:18px;font-weight:700;color:#666;text-align:center}.order-pay-png{margin:20px auto;width:150px;height:150px}.order-pay-png img{width:100%;height:100%}.order-pay-btn{display:flex;justify-content:space-around;align-items:center;padding-top:20px;text-align:center}.pay-btn{font-size:14px;margin:0 10px;padding:5px 10px;border:1px solid #666;box-sizing:border-box}
